# sharex-api

./: .env.example  Cargo.toml  setup.sh
src/: main.rs
