[package]
name = "sharex-uploader"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
dotenv = "0.15.0"
futures-util = "0.3.31"
mime = "0.3.17"
rand = { version = "0.9.0", features = ["std"] }
serde = "1.0.218"
serde_json = "1.0.139"
